--- a/style.css
+++ b/style.css
@@ -40,8 +40,9 @@ body {
 /*Stuff below governs the Explore screen*/
 
 #exploreBody {
-	background-image: url("img/exploreHome1.jpg");
+	background-image: url("img/jYqqRWg.jpg");
 	background-position: bottom center;
+    
 
 }
 
