--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-	background-image: url("http://hdwallpaperia.com/wp-content/uploads/2013/11/Game-Backgrounds-Wallpaper.jpg");
+	background-image: url("https://media.giphy.com/media/5xtDaryppd5NqQMgT4I/giphy.gif");
     background-size: cover;
     background-position: center center;
 	font-family: monospace;
