--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-	background-image: url("https://media.giphy.com/media/5xtDaryppd5NqQMgT4I/giphy.gif");
+	background-image: url("http://31.media.tumblr.com/bebe2de8ca5823d7abad15250ffd8b26/tumblr_n027saG8GK1spd7x6o1_500.gif");
     background-size: cover;
     background-position: center center;
 	font-family: monospace;
