--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 .titleContent {
 	margin: 10% auto;
     text-align: center;
+    font-family: "orange juice"orange; ;
 }
 
 .splashTitle {
