--- a/style.css
+++ b/style.css
@@ -152,3 +152,13 @@ display: inline;
     margin: 20px;
     font-size:0.6em;
 }
+
+
+#reaper {
+    background-image: url("img/Reaper_portrait.jpg");
+    width: 200px;
+    height: 100px;
+    background-size: 50px, 50px;
+
+
+}
