--- a/style.css
+++ b/style.css
@@ -160,6 +160,8 @@ display: inline;
     height: 100px;
     background-size: 100px, 100px;
     background-repeat: no-repeat;
+    margin-left:300px; 
+    margin-top:450px;
 
 
 }
