--- a/style.css
+++ b/style.css
@@ -160,8 +160,9 @@ display: inline;
     height: 100px;
     background-size: 200px, 200px;
     background-repeat: no-repeat;
-    margin-left:300px; 
-    margin-top:450px;
+    margin-left: 300px; 
+    margin-top: 450px;
+    margin-bottom: 150px;
 
 
 }
