--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ display: inline;
 
 
 #kenji {
-    background-image: url("img/322px-Genji-portrait.jpg");
+    background-image: url("img/NkkGYNI.gif ");
     width: 200px;
     height: 100px;
     background-size: 200px, 200px;
