--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ display: inline;
 
 
 #reaper {
-    background-image: url("img/Reaper_portrait.jpg");
+    background-image: url("img/1236166573_steven_seagal_shooting_kids.gif");
     width: 200px;
     height: 100px;
     background-size: 200px, 200px;
