fv;mf;mfv;blk;vm bdvc .,nm *

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ display: inline;
     background-size: 200px, 200px;
     background-repeat: no-repeat;
     margin-left: 300px; 
-    margin-top: 450px;
+    margin-top: 900px;
     margin-bottom: 150px;
 
 
@@ -174,7 +174,7 @@ display: inline;
     height: 100px;
     background-size: 200px, 200px;
     background-repeat: no-repeat;
-    margin-left: 370px; 
+    margin-left: 3700.px; 
     margin-top: 450px;
     margin-bottom: 150px;
 
